fix error message changing the layout and inputs not stretching

--- a/client/src/styles/FormWrapper.module.scss
+++ b/client/src/styles/FormWrapper.module.scss
@@ -1,8 +1,6 @@
 .wrapper {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  padding: 0 2rem;
   margin: 0 auto;
   max-width: 20rem;
   gap: 2.25rem;
